--- a/src/ui/src/app/components/shared/navbar/navbar.component.html
+++ b/src/ui/src/app/components/shared/navbar/navbar.component.html
@@ -16,32 +16,19 @@
 						<path d="M5241 4453 c-209 -314 -208 -297 -41 -422 19 -14 37 -28 40 -31 3 -4 41 -29 85 -58 44 -29 85 -56 92 -62 6 -5 33 -19 60 -31 26 -13 50 -25 53 -29 9 -10 225 -110 237 -110 5 0 28 -9 51 -20 22 -11 46 -20 52 -20 6 0 46 -12 88 -26 88 -30 122 -39 297 -74 167 -33 535 -46 650 -23 33 7 101 20 150 28 122 21 333 81 418 119 17 7 59 24 92 37 100 38 393 199 415 228 3 3 17 13 31 21 44 25 90 62 157 126 64 62 64 62 -73 265 -76 112 -163 242 -194 288 -55 83 -55 83 -86 45 -60 -76 -156 -165 -233 -217 -26 -17 -49 -33 -52 -37 -3 -3 -27 -19 -55 -35 -120 -72 -270 -131 -415 -164 -30 -7 -71 -17 -90 -21 -136 -32 -403 -39 -560 -15 -231 36 -318 62 -518 153 -41 19 -134 73 -142 82 -3 3 -21 17 -40 30 -55 39 -169 136 -182 155 -81 124 -82 123 -287 -182z" />
 					</g>
 				</svg> -->
-                <span class="text-primary flex-shrink-0 me-2">
-                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="75.000000pt" height="24.000000pt"
-                      viewBox="0 0 1000.000000 300.000000" preserveAspectRatio="xMidYMid meet" style="margin-left: 0px;">
-                      <g transform="translate(0.000000,275.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-                        <path
-                          d="M520 2725 c0 -3 0 -104 0 -225 0 -121 0 -224 0 -230 0 -6 84 -10 230 -10 l231 0 -3 -787 c-4 -900 0 -858 -87 -944 -71 -71 -168 -85 -263 -38 -43 22 -73 62 -104 138 l-23 56 -250 3 c-138 1 -251 -1 -251 -5 0 -5 11 -48 24 -98 47 -173 117 -297 228 -401 188 -175 476 -231 735 -142 132 45 199 87 281 173 103 108 159 228 187 400 12 75 15 262 15 1103 l0 1012 -475 0 c-261 0 -475 -2 -475 -5z">
-                        </path>
-                        <path
-                          d="M2305 2734 c-326 -53 -572 -272 -639 -571 -21 -92 -21 -270 0 -371 33 -164 134 -314 272 -405 79 -53 217 -116 397 -182 201 -74 271 -111 341 -180 74 -73 96 -129 96 -242 -1 -96 -31 -162 -107 -231 -73 -67 -154 -97 -260 -96 -102 1 -167 28 -229 94 -61 66 -88 121 -111 232 l-5 28 -256 0 -257 0 7 -60 c21 -187 95 -345 226 -484 176 -186 400 -275 664 -263 198 9 362 65 508 176 127 96 233 262 280 436 31 118 31 338 -1 450 -82 290 -258 442 -689 594 -95 34 -198 74 -230 90 -70 35 -146 115 -161 167 -14 52 -14 147 1 198 18 60 99 138 163 157 100 29 212 9 275 -48 54 -48 76 -86 97 -168 l19 -70 244 0 244 0 -3 49 c-8 132 -80 311 -171 423 -96 119 -250 219 -395 258 -60 16 -263 28 -320 19z">
-                        </path>
-                        <path
-                          d="M3447 2481 l-187 -269 2 -417 3 -417 160 233 160 234 3 -907 c1 -533 6 -908 11 -908 5 0 168 233 362 518 775 1134 880 1287 889 1290 7 2 10 -320 10 -912 l0 -916 250 0 250 0 0 1370 0 1370 -232 0 -233 0 -390 -560 c-214 -307 -393 -559 -397 -559 -5 -1 -8 251 -8 559 l0 560 -232 0 -233 -1 -188 -268z">
-                        </path>
-                        <path
-                          d="M5445 2727 c-3 -7 -4 -114 -3 -237 l3 -225 483 -3 482 -2 0 -330 0 -330 -272 -2 -273 -3 0 -235 0 -235 273 -3 272 -2 0 -320 c0 -249 -3 -320 -12 -320 -7 0 -220 0 -473 0 -253 0 -466 -4 -473 -8 -9 -7 -12 -61 -10 -238 l3 -229 738 -3 737 -2 -2 1367 -3 1368 -733 3 c-588 2 -734 0 -737 -11z">
-                        </path>
-                        <path
-                          d="M7002 2503 l3 -238 478 -3 477 -2 0 -330 0 -330 -267 -2 -268 -3 -3 -237 -2 -238 270 0 270 0 -2 -320 -3 -321 -475 -2 -475 -2 -3 -237 -2 -238 735 0 735 0 0 1370 0 1370 -735 0 -735 0 2 -237z">
-                        </path>
-                        <path
-                          d="M8557 2723 c-4 -3 -7 -618 -7 -1365 l0 -1358 255 0 255 0 0 1130 0 1130 253 2 252 3 3 233 2 232 -503 0 c-277 0 -507 -3 -510 -7z">
-                        </path>
-                      </g>
-                    </svg>
-                  </span>
-            </span>
+				<span class="text-primary flex-shrink-0 me-2">
+					<svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="75.000000pt" height="24.000000pt" viewBox="0 0 1000.000000 300.000000" preserveAspectRatio="xMidYMid meet" style="margin-left: 0px">
+						<g transform="translate(0.000000,275.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+							<path d="M520 2725 c0 -3 0 -104 0 -225 0 -121 0 -224 0 -230 0 -6 84 -10 230 -10 l231 0 -3 -787 c-4 -900 0 -858 -87 -944 -71 -71 -168 -85 -263 -38 -43 22 -73 62 -104 138 l-23 56 -250 3 c-138 1 -251 -1 -251 -5 0 -5 11 -48 24 -98 47 -173 117 -297 228 -401 188 -175 476 -231 735 -142 132 45 199 87 281 173 103 108 159 228 187 400 12 75 15 262 15 1103 l0 1012 -475 0 c-261 0 -475 -2 -475 -5z"></path>
+							<path d="M2305 2734 c-326 -53 -572 -272 -639 -571 -21 -92 -21 -270 0 -371 33 -164 134 -314 272 -405 79 -53 217 -116 397 -182 201 -74 271 -111 341 -180 74 -73 96 -129 96 -242 -1 -96 -31 -162 -107 -231 -73 -67 -154 -97 -260 -96 -102 1 -167 28 -229 94 -61 66 -88 121 -111 232 l-5 28 -256 0 -257 0 7 -60 c21 -187 95 -345 226 -484 176 -186 400 -275 664 -263 198 9 362 65 508 176 127 96 233 262 280 436 31 118 31 338 -1 450 -82 290 -258 442 -689 594 -95 34 -198 74 -230 90 -70 35 -146 115 -161 167 -14 52 -14 147 1 198 18 60 99 138 163 157 100 29 212 9 275 -48 54 -48 76 -86 97 -168 l19 -70 244 0 244 0 -3 49 c-8 132 -80 311 -171 423 -96 119 -250 219 -395 258 -60 16 -263 28 -320 19z"></path>
+							<path d="M3447 2481 l-187 -269 2 -417 3 -417 160 233 160 234 3 -907 c1 -533 6 -908 11 -908 5 0 168 233 362 518 775 1134 880 1287 889 1290 7 2 10 -320 10 -912 l0 -916 250 0 250 0 0 1370 0 1370 -232 0 -233 0 -390 -560 c-214 -307 -393 -559 -397 -559 -5 -1 -8 251 -8 559 l0 560 -232 0 -233 -1 -188 -268z"></path>
+							<path d="M5445 2727 c-3 -7 -4 -114 -3 -237 l3 -225 483 -3 482 -2 0 -330 0 -330 -272 -2 -273 -3 0 -235 0 -235 273 -3 272 -2 0 -320 c0 -249 -3 -320 -12 -320 -7 0 -220 0 -473 0 -253 0 -466 -4 -473 -8 -9 -7 -12 -61 -10 -238 l3 -229 738 -3 737 -2 -2 1367 -3 1368 -733 3 c-588 2 -734 0 -737 -11z"></path>
+							<path d="M7002 2503 l3 -238 478 -3 477 -2 0 -330 0 -330 -267 -2 -268 -3 -3 -237 -2 -238 270 0 270 0 -2 -320 -3 -321 -475 -2 -475 -2 -3 -237 -2 -238 735 0 735 0 0 1370 0 1370 -735 0 -735 0 2 -237z"></path>
+							<path d="M8557 2723 c-4 -3 -7 -618 -7 -1365 l0 -1358 255 0 255 0 0 1130 0 1130 253 2 252 3 3 233 2 232 -503 0 c-277 0 -507 -3 -510 -7z"></path>
+						</g>
+					</svg>
+				</span>
+			</span>
 		</a>
 
 		<!-- Theme switcher -->
@@ -58,7 +45,7 @@
 		<div class="dropdown nav d-none d-sm-block order-lg-3">
 			@if (isLoggedIn) {
 				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="{{webassets}}/webassets/images/home/avatar.jpg" width="48" alt="{{ user.username }}" />
+					<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="{{ user.username }}" />
 					<div class="ps-2">
 						<div class="fs-xs lh-1 opacity-60">Hello,</div>
 						<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
@@ -96,7 +83,7 @@
 				</div>
 			} @else {
 				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="{{webassets}}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
+					<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
 					<div class="ps-2">
 						<div class="fs-xs lh-1 opacity-60">Hello,</div>
 						<div class="fs-sm dropdown-toggle">Guest</div>
@@ -119,10 +106,10 @@
 		<!-- Navbar collapse (Main navigation) -->
 		<nav class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav navbar-nav-scroll me-auto" style="--ar-scroll-height: 520px">
-                <li class="nav-item">
+				<li class="nav-item">
 					<a class="nav-link" (click)="navToggler()" routerLink="/">Home</a>
 				</li>
-                <!-- <li class="nav-item dropdown">
+				<!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Lab</a>
                     <div class="dropdown-menu overflow-hidden p-0">
                       <div class="d-lg-flex">
@@ -161,7 +148,7 @@
                       </div>
                     </div>
                   </li> -->
-				
+
 				<li class="nav-item">
 					<a class="nav-link" (click)="navToggler()" routerLink="/blogs">Blogs</a>
 				</li>
@@ -192,7 +179,7 @@
 					<!-- User signed in state. Account dropdown on screens > 576px -->
 					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
 						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="{{webassets}}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
+							<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
 							<div class="ps-2">
 								<div class="fs-xs lh-1 opacity-60">Hello,</div>
 								<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
@@ -231,7 +218,7 @@
 				} @else {
 					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
 						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="{{webassets}}/webassets/images/home/avatar.jpg" width="48" alt="Isabella Bocouse" />
+							<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="Isabella Bocouse" />
 							<div class="ps-2">
 								<div class="fs-xs lh-1 opacity-60">Hello,</div>
 								<div class="fs-sm dropdown-toggle">Guest</div>
