--- a/src/ui/src/app/app.component.html
+++ b/src/ui/src/app/app.component.html
@@ -6,8 +6,8 @@
 		<app-navbar></app-navbar>
 	</ng-container>
 	<router-outlet></router-outlet>
-
+	@defer {
 		<app-side-panel></app-side-panel>
-	
+	}
 	<app-back-to-top></app-back-to-top>
 </main>
