--- a/src/ui/src/app/components/account/login/login.component.html
+++ b/src/ui/src/app/components/account/login/login.component.html
@@ -5,35 +5,31 @@
 		<a routerLink="/account/signup">Register here!</a>
 	</p>
 	<form class="" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-        <div class="row row-cols-1 row-cols-sm-1 disabled">
+		<div class="row row-cols-1 row-cols-sm-1 disabled">
 			<div class="col mb-6 pb-4">
 				<div class="position-relative">
-                    <i class="ai-mail fs-lg position-absolute top-50 start-0 translate-middle-y ms-3"></i>
-                    <input class="form-control form-control-lg ps-5" formControlName="username" type="text" placeholder="Email address" required />
-                </div>
+					<i class="ai-mail fs-lg position-absolute top-50 start-0 translate-middle-y ms-3"></i>
+					<input class="form-control form-control-lg ps-5" formControlName="username" type="text" placeholder="Email address" required />
+				</div>
 			</div>
 			<div class="col mb-6">
 				<div class="position-relative">
-                    <i class="ai-lock-closed fs-lg position-absolute top-50 start-0 translate-middle-y ms-3"></i>
-                    <div class="password-toggle">
-                        <input class="form-control form-control-lg ps-5" formControlName="password" type="password" placeholder="Password" required />
-                        <label class="password-toggle-btn" aria-label="Show/hide password">
-                            <input class="password-toggle-check" type="checkbox" />
-                            <span class="password-toggle-indicator"></span>
-                        </label>
-                    </div>
-                </div>
+					<i class="ai-lock-closed fs-lg position-absolute top-50 start-0 translate-middle-y ms-3"></i>
+					<div class="password-toggle">
+						<input class="form-control form-control-lg ps-5" formControlName="password" type="password" placeholder="Password" required />
+						<label class="password-toggle-btn" aria-label="Show/hide password">
+							<input class="password-toggle-check" type="checkbox" />
+							<span class="password-toggle-indicator"></span>
+						</label>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="pb-3 mb-3">
-			
-		</div>
-		<div class="mb-4">
-			
-		</div>
+		<div class="pb-3 mb-3"></div>
+		<div class="mb-4"></div>
 		<div class="d-flex flex-wrap align-items-center justify-content-between pb-4">
 			<div class="form-check my-1">
-				<input class="form-check-input" type="checkbox" id="keep-signedin" disabled/>
+				<input class="form-check-input" type="checkbox" id="keep-signedin" disabled />
 				<label class="form-check-label ms-1" for="keep-signedin">Keep me signed in</label>
 			</div>
 			<a class="fs-sm fw-semibold text-decoration-none my-1" routerLink="/account/otp" [queryParams]="{ username: 'test' }">Forgot password?</a>
