--- a/src/ui/src/app/components/shared/side-panel/side-panel.component.html
+++ b/src/ui/src/app/components/shared/side-panel/side-panel.component.html
@@ -8,6 +8,15 @@
 		<button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
+        <div class="card text-center card border-0 bg-secondary mb-2">
+			<div class="card-header py-2 mb-2">Prefs</div>
+			<div class="card-body py-2">
+				<div class="btn-group w-100" role="group" aria-label="Outline button group">
+					<button type="button" (click)="resetPrompt()" class="btn btn-sm btn-outline-danger" [class.active]="isAnimationEnabled">Reset</button>
+					<button type="button" (click)="refreshPrompt()" class="btn btn-sm btn-outline-danger" [class.active]="!isAnimationEnabled">Refresh</button>
+				</div>
+			</div>
+		</div>
 		<div class="d-flex align-items-center mt-n2 mb-3 pt-4">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
 			<h5 class="mb-0">Media player</h5>
@@ -73,9 +82,9 @@
 			</div>
 			<div class="card-body py-2">
 				<div class="btn-group w-100" role="group" aria-label="Outline button group">
-					<button type="button" (click)="defaultScrollbar()" class="btn btn-sm btn-outline-primary">Default</button>
-					<button type="button" (click)="disableScrollbar()" class="btn btn-sm btn-outline-primary">Disable</button>
-					<button type="button" (click)="skinnyScrollbar()" class="btn btn-sm btn-outline-primary">Skiny</button>
+					<button type="button" (click)="defaultScrollbar()"  [class.active]="currentScrollState === ScrollbarState.Default"  class="btn btn-sm btn-outline-primary">Default</button>
+					<button type="button" (click)="disableScrollbar()" [class.active]="currentScrollState === ScrollbarState.Disable" class="btn btn-sm btn-outline-primary">Disable</button>
+					<button type="button" (click)="skinnyScrollbar()" [class.active]="currentScrollState === ScrollbarState.Skinny" class="btn btn-sm btn-outline-primary">Skiny</button>
 				</div>
 			</div>
 		</div>
