:art: minor changes + likes count

--- a/src/ui/src/app/components/about/home/home.component.html
+++ b/src/ui/src/app/components/about/home/home.component.html
@@ -50,19 +50,19 @@
 			<div class="col-md-5 col-lg-6 offset-xxl-1 order-md-2 position-relative mb-3 mb-md-0" style="margin-top: -115px">
 				<div class="d-none d-md-block position-absolute bottom-0 end-0 text-uppercase fw-bold lh-1 pb-5 mb-4 pe-3" style="color: var(--ar-gray-100); font-size: 180px; transform: translate3d(0, 0, 0)">
 					<div class="d-flex mb-lg-3" style="padding-left: 160px">
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="150">A</div>
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="200">l</div>
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="250">m</div>
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="300">o</div>
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="350">n</div>
-						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="400">d</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="150">J</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="200">S</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="250">M</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="300">3</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="350">3</div>
+						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="400" data-aos-delay="400">T</div>
 					</div>
-					<div class="d-flex">
+					<!-- <div class="d-flex">
 						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="300" data-aos-delay="150">C</div>
 						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="300" data-aos-delay="200">o</div>
 						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="300" data-aos-delay="250">v</div>
 						<div data-aos="flip-right" data-aos-duration="700" data-aos-offset="300" data-aos-delay="300">e</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
