:art: medium like zoom on images in blogs

--- a/src/ui/src/app/components/about/home/home.component.html
+++ b/src/ui/src/app/components/about/home/home.component.html
@@ -168,7 +168,7 @@
 	<!-- Use case -->
 	<div class="row align-items-center justify-content-center justify-content-md-start py-4 py-md-5 my-2 my-sm-3 my-md-0 my-xl-3">
 		<div class="col-11 col-sm-9 col-md-7 col-lg-6 pb-2 pb-sm-3 pb-md-0 mb-4 mb-md-0">
-			<div class="parallax" style="max-width: 636px">
+			<div class="parallax" id="scene" style="max-width: 636px">
 				<div class="parallax-layer" data-depth="0.05">
 					<img src="{{ webassets }}/webassets/images/about/circle-1.png" alt="Circle 1" />
 				</div>
