--- a/src/ui/src/app/components/blogs/view/view.component.html
+++ b/src/ui/src/app/components/blogs/view/view.component.html
@@ -46,7 +46,7 @@
 			</div>
 
 			<!-- Post content -->
-			<div class="blogContainer" id="blogContent">
+			<div class="blogContainer gallery" id="blogContent">
 				<div data-aos="fade-in" data-aos-duration="500" *ngIf="!isLoading; else contentPlaceholder" [innerHTML]="content"></div>
 				<ng-template #contentPlaceholder>
 					<div class="card" aria-hidden="true">
