:rocket: add singularity content

--- a/src/ui/src/app/components/blogs/view/view.component.html
+++ b/src/ui/src/app/components/blogs/view/view.component.html
@@ -82,12 +82,12 @@
 					<!-- Relevant topics -->
 					<h4 class="pt-3 pt-lg-1 mb-4">Tags:</h4>
 					<div class="d-flex flex-wrap mt-n3 ms-n3 mb-lg-5 mb-4 pb-3 pb-lg-0">
-						<!-- <div *ngFor="let tag of tags">
+						<div *ngFor="let tag of tags">
                             <a class="nav-link fs-sm py-1 px-0 me-3" routerLink="/blogs" [queryParams]="{ tag: tag }">
                                 <span class="text-primary">#</span>
                                 {{ tag }}
                             </a>
-                        </div> -->
+                        </div>
 					</div>
 				</div>
 			</div>
