--- a/src/ui/src/app/components/studio/single/singularity/singularity.component.html
+++ b/src/ui/src/app/components/studio/single/singularity/singularity.component.html
@@ -1,1 +1,94 @@
-<p>singularity works!</p>
+   <!-- Hero -->
+   <section class="position-relative h-100 pt-5 mb-5">
+    <div class="bg-secondary position-absolute top-0 end-0 w-50 h-100 d-none d-lg-block"></div>
+    <div class="bg-secondary position-absolute top-0 end-0 w-100 h-100 d-lg-none"></div>
+    <div class="container position-relative z-2 py-5 pb-lg-0">
+
+    
+      <div class="d-lg-flex align-items-center pt-3 pb-xxl-5">
+        <img class="d-block order-lg-2 me-auto me-lg-0 ms-auto" src="{{ baseadd }}/webassets/studio/singularity/assets/cover.jpg" width="480" alt="Image">
+        <div class="order-lg-1 text-center text-lg-start pe-lg-4 py-4 py-md-5">
+          <h1 class="display-2 text-uppercase text-warning pb-3 pb-lg-4">SINGULARITY</h1>
+          <p class="fs-lg mx-auto mx-lg-0 mb-0" style="max-width: 530px;">An original orchestral soundtrack / trailer music crafted with love.Look forward to more of these this year.</p>
+          <a class="fs-lg text-primary btn-sm" style="cursor: pointer;" (click)="scrollToLinks()">Stream / Download </a>
+           
+        </div>
+        
+      </div>
+
+      <!-- Social links -->
+     
+    </div>
+  </section>
+
+   
+<section class="bg-secondary py-5" #myDiv>
+	<div class="container py-md-2 py-lg-3 py-xl-5 my-2 my-sm-3 my-md-4 my-xxl-5">
+		<div class="row">
+			<div class="col-md-4 text-center text-md-start">
+				<h2 class="h1">Download/Stream Tracks</h2>
+				<p class="pb-3 pb-sm-4">Download Mp3 and flac</p>
+		
+			</div>
+			<div class="col-md-8 col-lg-7 offset-lg-1" id="appTracks">
+				<div class="accordion" id="faq">
+					<div class="pb-2">
+						<div class="accordion-item bg-light">
+							<h3 class="accordion-header" id="hd1"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#trk1" aria-expanded="false" aria-controls="questionTwo">Stream</button></h3>
+							<div class="accordion-collapse collapse" id="trk1" aria-labelledby="hd1" data-bs-parent="#faq">
+								<div class="accordion-body fs-sm">
+									<p>prod: S.O.U.V.I.K</p>
+									<a type="button" href="#customizer" data-bs-toggle="offcanvas" class="btn-sm btn mx-1 mb-2 btn-outline-danger" (click)="playA()" target="_blank">
+										<i class="ai-play fs-sm"></i>
+										&nbsp;&nbsp;Play now
+									</a>
+									<a type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="https://soundcloud.com/jsm33t/jsm33t-singularity-original-mix" target="_blank">
+										<i class="ai-soundcloud fs-sm"></i>
+										&nbsp;&nbsp;Soundcloud
+									</a>
+									<a type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="https://studio.youtube.com/video/xiqYdFchMHU" target="_blank" download="">
+										<i class="ai-youtube fs-sm"></i>
+										&nbsp;&nbsp;PLay video
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="pb-2">
+						<div class="accordion-item bg-light">
+							<h3 class="accordion-header" id="hd2"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#trk2" aria-expanded="false" aria-controls="questionTwo">Download HQ</button></h3>
+							<div class="accordion-collapse collapse" id="trk2" aria-labelledby="hd2" data-bs-parent="#faq">
+								<div class="accordion-body fs-sm">
+									<p>prod: JSM33T</p>
+									<a rel="noopener"  type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="{{mp3Link}}" target="_blank" download="">
+										<i class="ai-download fs-sm"></i>
+										&nbsp;&nbsp;Mp3
+									</a>
+									<a rel="noopener"  type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="{{flacLink}}" target="_blank" download="">
+										<i class="ai-download fs-sm"></i>
+										&nbsp;&nbsp;FLAC
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+  <!-- Subscription -->
+  <section class="container position-relative py-5 my-lg-3 my-xl-4 my-xxl-5">
+    <div class="position-absolute top-0 end-0 d-none d-md-block" style="animation: rotate-cw 70s linear infinite; margin-top: -190px; margin-right: 100px;">
+      <svg class="text-danger" width="306" height="306" viewBox="0 0 306 306" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M150.114 3.79989C150.941 0.89425 155.059 0.894232 155.886 3.7999L168.982 49.8433C170.097 53.7629 175.181 54.7742 177.711 51.5796L207.431 14.0528C209.306 11.6846 213.111 13.2606 212.762 16.2613L207.242 63.8117C206.772 67.8596 211.082 70.7395 214.642 68.7562L256.46 45.4592C259.099 43.989 262.011 46.901 260.541 49.54L237.244 91.3582C235.261 94.9181 238.14 99.2281 242.188 98.7582L289.739 93.2377C292.739 92.8893 294.315 96.694 291.947 98.5695L254.42 128.289C251.226 130.819 252.237 135.903 256.157 137.018L302.2 150.114C305.106 150.941 305.106 155.059 302.2 155.886L256.157 168.982C252.237 170.097 251.226 175.181 254.42 177.711L291.947 207.431C294.315 209.306 292.739 213.111 289.739 212.762L242.188 207.242C238.14 206.772 235.261 211.082 237.244 214.642L260.541 256.46C262.011 259.099 259.099 262.011 256.46 260.541L214.642 237.244C211.082 235.261 206.772 238.14 207.242 242.188L212.762 289.739C213.111 292.739 209.306 294.315 207.431 291.947L177.711 254.42C175.181 251.226 170.097 252.237 168.982 256.157L155.886 302.2C155.059 305.106 150.941 305.106 150.114 302.2L137.018 256.157C135.903 252.237 130.819 251.226 128.289 254.42L98.5695 291.947C96.694 294.315 92.8893 292.739 93.2377 289.739L98.7582 242.188C99.2281 238.14 94.9181 235.261 91.3582 237.244L49.54 260.541C46.901 262.011 43.989 259.099 45.4592 256.46L68.7562 214.642C70.7395 211.082 67.8596 206.772 63.8117 207.242L16.2613 212.762C13.2606 213.111 11.6846 209.306 14.0528 207.431L51.5796 177.711C54.7742 175.181 53.7629 170.097 49.8433 168.982L3.79989 155.886C0.89425 155.059 0.894232 150.941 3.7999 150.114L49.8433 137.018C53.7629 135.903 54.7742 130.819 51.5796 128.289L14.0528 98.5695C11.6846 96.694 13.2606 92.8893 16.2613 93.2377L63.8117 98.7582C67.8596 99.2281 70.7395 94.9181 68.7562 91.3582L45.4592 49.54C43.989 46.901 46.901 43.989 49.54 45.4592L91.3582 68.7562C94.9181 70.7395 99.2281 67.8596 98.7582 63.8117L93.2377 16.2613C92.8893 13.2606 96.694 11.6846 98.5695 14.0528L128.289 51.5796C130.819 54.7742 135.903 53.7629 137.018 49.8433L150.114 3.79989Z" stroke="currentColor" stroke-width="2"></path>
+      </svg>
+    </div>
+    <div class="pb-3 pt-2 py-sm-3 my-md-3 my-lg-4" style="max-width: 40rem;">
+      <h2 class="h1">Studio</h2>
+      <p class="fs-lg pb-2 pb-sm-3 pb-lg-4">Stay up to date with new releases</p>
+      
+        <button class="btn btn-primary" routerLink="/studio" type="button">Studio</button>
+      
+    </div>
+  </section>
