--- a/src/ui/src/app/components/studio/home/home.component.html
+++ b/src/ui/src/app/components/studio/home/home.component.html
@@ -107,18 +107,16 @@
 
 		<!-- Button -->
 		<div class="text-center pb-sm-2 pb-md-4 mt-n1 mt-lg-n2">
-			<a class="btn btn-lg btn-outline-dark rounded-0" href="#">Let's work together</a>
+			<a class="btn btn-lg btn-outline-dark rounded-0" routerLink="/about/contact">Let's work together</a>
 		</div>
 	</div>
 </section>
 
 <!-- Features (Binded slider) -->
-<section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5 pb-5">
+<!-- <section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5 pb-5">
 	<div class="row align-items-center pt-3 pt-sm-4 pt-lg-5 mt-md-3 mt-lg-0">
 		<div class="col-md-6 pb-2 pb-sm-0 mb-4 mb-sm-5 mb-md-0">
-			<!-- Binded images -->
 			<div class="binded-content bg-primary rounded-5">
-				<!-- Item -->
 				<div class="binded-item active" id="image1">
 					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 						<path d="M586.2,329.8c-0.2-2.9-0.6-5.8-1.3-8.6c-1.5-5.8-5.5-11-11.7-15c-5.5-3.6-12.7-6.1-20.2-7c-7.4-0.9-15-0.3-21.2,1.8c-6.9,2.3-12,6.2-14.9,11.3c-3.2,5.7-4,11.1-2.5,16.1c1.4,4.3,4.5,8,9.3,11.1c5.7,3.6,13.7,6.2,22.7,7.2c8.1,1,16,0.5,20.9-1.1c3.8-1.3,7.6-2.8,11.3-4.5c-2.6,11.4-10.3,23.2-22.8,35.1c-26.2,24.9-67.3,43.8-88.6,50.5c-1.7,0.5-2.7,2.4-2.1,4.1c0.3,0.8,0.8,1.5,1.6,1.9c0.5,0.2,1,0.4,1.5,0.4c0.3,0,0.7,0,1-0.2c18.8-5.9,62.1-24.3,91.2-52c15.2-14.5,23.8-29.1,25.6-43.5c18.6-10.1,35.1-24.9,50-40.7v-9.5C621.1,303.4,604.7,319,586.2,329.8z M565.3,339.3c-4.3,1.4-11.1,1.8-18.2,0.9c-7.9-1-15-3.2-19.9-6.4c-3.5-2.2-5.7-4.7-6.5-7.5c-1-3.1-0.3-6.8,2-10.9c1.7-3.1,4.6-5.5,8.5-7.3c4.3-1.9,9.5-2.9,15-2.9c2,0,4,0.1,6.1,0.4c6.3,0.8,12.3,2.8,16.9,5.5c2.5,1.5,4.6,3.3,6.2,5.3c1.6,1.9,2.7,4.1,3.3,6.3c0.9,3.5,1.3,7,1.2,10.5C575,335.7,570.1,337.7,565.3,339.3z"></path>
@@ -129,7 +127,6 @@
 					<img class="d-block position-relative z-2" src="https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="App screen" />
 				</div>
 
-				<!-- Item -->
 				<div class="binded-item" id="image2">
 					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 						<path
@@ -139,7 +136,6 @@
 					<img class="d-block position-relative z-2" src="https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="App screen" />
 				</div>
 
-				<!-- Item -->
 				<div class="binded-item" id="image3">
 					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 						<path
@@ -152,7 +148,6 @@
 		</div>
 		<div class="col-md-6 col-xl-5 offset-xl-1">
 			<div class="ps-md-4 ps-xl-0">
-				<!-- Swiper slider -->
 				<div
 					class="swiper"
 					data-swiper-options='{
@@ -166,21 +161,18 @@
 		  }'
 				>
 					<div class="swiper-wrapper">
-						<!-- Item -->
 						<div class="swiper-slide" data-swiper-binded="#image1">
 							<div class="text-primary fs-xl fw-bold mb-3">01</div>
 							<h2 class="h1 mb-lg-4">Choose the courses you are interested in</h2>
 							<p class="mb-0">Odio pellentesque faucibus tortor, sit ac mattis tincidunt magna sit. Vitae elementum amet etiam rhoncus, lacinia amet interdum pharetra tincidunt. Ultricies faucibus ac morbi eget nunc pretium id. Velit tristique scelerisque elit sociis convallis ultricies aliquam.</p>
 						</div>
 
-						<!-- Item -->
 						<div class="swiper-slide" data-swiper-binded="#image2">
 							<div class="text-primary fs-xl fw-bold mb-3">02</div>
 							<h2 class="h1 mb-lg-4">Track classes in progress and seek new knowledge</h2>
 							<p class="mb-0">Odio pellentesque faucibus tortor, sit ac mattis tincidunt magna sit. Vitae elementum amet etiam rhoncus, lacinia amet interdum pharetra tincidunt. Ultricies faucibus ac morbi eget nunc pretium id. Velit tristique scelerisque elit sociis convallis ultricies aliquam.</p>
 						</div>
 
-						<!-- Item -->
 						<div class="swiper-slide" data-swiper-binded="#image3">
 							<div class="text-primary fs-xl fw-bold mb-3">03</div>
 							<h2 class="h1 mb-lg-4">Study with a teacher in video format at a time convenient for you</h2>
@@ -189,7 +181,6 @@
 					</div>
 				</div>
 
-				<!-- Slider controls (Prev / Next) -->
 				<div class="d-flex justify-content-center justify-content-md-start pt-4 mt-2 mt-lg-0 pt-lg-5">
 					<button class="btn btn-icon btn-outline-primary rounded-circle me-3" type="button" id="prev-feature" aria-label="Prev">
 						<i class="ai-arrow-left"></i>
@@ -201,4 +192,4 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
