--- a/src/ui/src/app/components/studio/single/singularity/singularity.component.html
+++ b/src/ui/src/app/components/studio/single/singularity/singularity.component.html
@@ -46,7 +46,7 @@
 										<i class="ai-soundcloud fs-sm"></i>
 										&nbsp;&nbsp;Soundcloud
 									</a>
-									<a type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="https://studio.youtube.com/video/xiqYdFchMHU" target="_blank" download="">
+									<a type="button" class="btn-sm btn mx-1 mb-2 btn-outline-primary" href="https://www.youtube.com/watch?v=xiqYdFchMHU" target="_blank" download="">
 										<i class="ai-youtube fs-sm"></i>
 										&nbsp;&nbsp;PLay video
 									</a>
