--- a/src/ui/src/app/components/blogs/blog.component.html
+++ b/src/ui/src/app/components/blogs/blog.component.html
@@ -21,7 +21,7 @@
 			<!-- Post -->
 			<div *ngFor="let blog of blogs; let i = index">
 				<article class="row g-0 border-0 mb-4">
-					<a class="col-sm-5 bg-repeat-0 bg-size-cover bg-position-center rounded-5" [routerLink]="['/blog', formatDate(blog.dateAdded), blog.slug]" [style.backgroundImage]="'url(' + cover + '/content/blogs/' + this.formatDate(blog.dateAdded) + '/' + blog.slug + '/cover.webp)'" style="min-height: 14rem" aria-label="Post image"></a>
+					<a class="col-sm-5 bg-repeat-0 bg-size-cover bg-position-center rounded-5" [routerLink]="['/blog', formatDate(blog.dateAdded), blog.slug]" [style.backgroundImage]="'url(' + cover + '/blogs/' + this.formatDate(blog.dateAdded) + '/' + blog.slug + '/cover.webp)'" style="min-height: 14rem" aria-label="Post image"></a>
 					<div class="col-sm-7">
 						<div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
 							<h3>
