--- a/src/ui/src/app/components/shared/navbar/navbar.component.html
+++ b/src/ui/src/app/components/shared/navbar/navbar.component.html
@@ -45,7 +45,7 @@
 		<div class="dropdown nav d-none d-sm-block order-lg-3">
 			@if (isLoggedIn) {
 				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="{{ user.username }}" />
+					<img class="border rounded-circle" src="{{user.pfp}}" width="48" alt="{{ user.username }}" />
 					<div class="ps-2">
 						<div class="fs-xs lh-1 opacity-60">Hello,</div>
 						<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
@@ -76,14 +76,16 @@
 						Accessibility
 					</a>
 					<div class="dropdown-divider"></div>
-					<button class="dropdown-item" href="#" (click)="logout()">
+					<button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
 						<i class="ai-logout fs-lg opacity-70 me-2"></i>
 						Sign out
 					</button>
+              
 				</div>
 			} @else {
 				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
+					<!-- <img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="guest" /> -->
+                    <img class="border rounded-circle" src="{{ user.pfp}}" width="48" alt="guest" />
 					<div class="ps-2">
 						<div class="fs-xs lh-1 opacity-60">Hello,</div>
 						<div class="fs-sm dropdown-toggle">Guest</div>
@@ -91,7 +93,7 @@
 				</a>
 				<div class="dropdown-menu dropdown-menu-end my-1">
 					<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-					<a class="dropdown-item" routerLink="/account/login">
+					<a class="dropdown-item" type="button" (click)="redirectToLogin()">
 						<i class="ai-user-check fs-lg opacity-70 me-2"></i>
 						Login/Signup
 					</a>
@@ -179,7 +181,7 @@
 					<!-- User signed in state. Account dropdown on screens > 576px -->
 					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
 						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="guest" />
+							<img class="border rounded-circle" src="{{ user.pfp }}" width="48" alt="guest" />
 							<div class="ps-2">
 								<div class="fs-xs lh-1 opacity-60">Hello,</div>
 								<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
@@ -209,16 +211,16 @@
 								Accesibility
 							</a>
 							<div class="dropdown-divider"></div>
-							<button class="dropdown-item" href="#" (click)="logout()">
-								<i class="ai-logout fs-lg opacity-70 me-2"></i>
-								Sign out
-							</button>
+							<button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                                <i class="ai-logout fs-lg opacity-70 me-2"></i>
+                                Sign out
+                            </button>
 						</div>
 					</li>
 				} @else {
 					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
 						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="{{ webassets }}/webassets/images/home/avatar.jpg" width="48" alt="Isabella Bocouse" />
+							<img class="border rounded-circle" src="{{ user.pfp }}" width="48" alt="Isabella Bocouse" />
 							<div class="ps-2">
 								<div class="fs-xs lh-1 opacity-60">Hello,</div>
 								<div class="fs-sm dropdown-toggle">Guest</div>
@@ -240,20 +242,27 @@
 
 <!-- Modal markup -->
 
-<div id="logoutModal" class="modal" data-bs-backdrop="static" tabindex="-1" role="dialog">
-	<div class="modal-dialog" role="document" data-bs-backdrop="static" data-bs-keyboard="false">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">Logout</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body text-primary">Logout?</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-danger mx-4" data-bs-dismiss="modal" (click)="logout()">Ok</button>
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-			</div>
-		</div>
-	</div>
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Share It</h4>
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body py-4">
+                <p class="mb-3 fs-md">
+                    Logout?
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary w-100 w-sm-auto mb-3 mb-sm-0" type="button" data-bs-dismiss="modal">
+                    Cancel
+                </button>
+                <button class="btn btn-danger w-100 w-sm-auto ms-sm-3" type="button" (click)="logout()">
+                    <i class="ai-copy me-2 ms-n1"></i>
+                    Log out
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
