:rocket: fixed redirection logic

--- a/src/ui/src/app/components/account/login/login.component.html
+++ b/src/ui/src/app/components/account/login/login.component.html
@@ -40,7 +40,7 @@
 		<h2 class="h6 text-center pt-3 pt-lg-4 mb-4">Or sign in with your social account</h2>
 		<div class="row row-cols-1 row-cols-sm-2 gy-3">
 			<div class="col">
-				<a class="btn btn-icon btn-outline-secondary btn-google btn-lg w-100" type="button" (click)="googleLoginButton()">
+				<a class="btn btn-icon btn-danger btn-google btn-lg w-100" type="button" (click)="googleLoginButton()">
 					<i class="ai-google fs-xl me-2"></i>
 					Google
 				</a>
