--- a/src/ui/src/app/components/shared/navbar/navbar.component.html
+++ b/src/ui/src/app/components/shared/navbar/navbar.component.html
@@ -228,7 +228,7 @@
 						</a>
 						<div class="dropdown-menu">
 							<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-							<a class="dropdown-item" routerLink="/account/signup">
+							<a class="dropdown-item" type="button" (click)="redirectToLogin()">
 								<i class="ai-user-check fs-lg opacity-70 me-2"></i>
 								Login/Signup
 							</a>
