:art: added copy link feature in share window

--- a/src/ui/src/app/components/about/attributions/attributions.component.html
+++ b/src/ui/src/app/components/about/attributions/attributions.component.html
@@ -12,7 +12,7 @@
 		<!-- <app-audio-player></app-audio-player> -->
 		<!-- Page title -->
 		<h1 class="display-2">Attributions</h1>
-		<p class="fs-lg pb-4 mb-2 mb-sm-3">Obviously i did'nt design make everything would have taken one extra decade</p>
+		<p class="fs-lg pb-4 mb-2 mb-sm-3">Obviously i did'nt design/make everything, would have taken one extra decade</p>
 
 		<!-- Details cards -->
 		<div class="row row-cols-1 row-cols-sm-1 row-cols-xl-2 g-4 pb-2 pb-sm-4 pb-lg-5">
@@ -21,7 +21,7 @@
 				<div class="card border-0 h-100">
 					<div class="card-body">
 						<h4 class="card-title mb-4">UI</h4>
-						<p class="fs-lg fw-medium pb-3 mb-3">Used official bootstrap theme called 'Around'</p>
+						<p class="fs-lg fw-medium pb-3 mb-3">Official bootstrap theme called 'Around'</p>
 						<a class="btn btn-sm btn-outline-primary" href="https://themes.getbootstrap.com/product/around-multipurpose-template-ui-kit/" target="_blank">
 							<i class="ai-link me-2"></i>
 							Visit
